<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_margin="@dimen/gapLarge"
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_drone_select_bluetooth" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/gapMedium">

        <TextView
            android:layout_marginStart="@dimen/gapMedium"
            android:layout_marginEnd="@dimen/gapMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_drone_not_paired_yet" />

        <Button
            android:id="@+id/bt_launch_bt_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_drone_launch_bt_screen" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_devices"
        android:layout_above="@id/ll_buttons"
        android:layout_below="@id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/z_devices"
        layout="@layout/zero_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
