<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlyActivity">

    <LinearLayout
        android:id="@+id/l_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_connect" />

        <Button
            android:id="@+id/bt_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/l_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fly_phone" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_phone_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_phone_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_phone_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fly_drone" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_drone_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_drone_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_drone_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fly_data_sent" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_data_sent_yaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_data_sent_pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000" />

            <SeekBar
                style="@style/SeekBarData"
                android:id="@+id/sb_data_sent_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/throttle_area"
        android:layout_marginBottom="@dimen/gapLarge">

        <RelativeLayout
            android:id="@+id/rl_throttle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/gapXLarge">

            <View
                android:id="@+id/v_throttle"
                android:background="@color/throttle_area_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/gapLarge"
                android:layout_marginRight="@dimen/gapLarge" />

            <TextView
                android:textColor="@color/throttle_area_text"
                android:padding="@dimen/gapMedium"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content"
                android:text="@string/trottle_full" />

            <TextView
                android:textColor="@color/throttle_area_text"
                android:padding="@dimen/gapMedium"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:text="@string/trottle_stop" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_actual_throttle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/gapMedium"
            android:layout_marginRight="@dimen/gapMedium">

            <TextView
                android:id="@+id/tv_actual_throttle"
                android:layout_marginLeft="@dimen/gapLarge"
                android:layout_width="wrap_content"
                android:textColor="@color/throttle_text"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                tools:text="Throttle 0%" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/throttle_horizontal_line_height"
                android:background="@color/throttle_line" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
